Archive2/2c/c395d6eba4c5a9/output
main.cpp: In function 'void foo(int)':
main.cpp:4:6: error: redefinition of 'void foo(int)'
 void foo( const int ) {}
      ^
main.cpp:1:6: error: 'void foo(int)' previously defined here
 void foo( int ) {}
      ^
main.cpp: At global scope:
main.cpp:9:29: error: redefinition of 'template<class T> void bar(T)'
 template< typename T > void bar( const T ) {}
                             ^
main.cpp:6:29: error: 'template<class T> void bar(T)' previously declared here
 template< typename T > void bar( T ) {}
                             ^
